feat: Refactor security configuration by introducing `PasswordConfig`, enabling CORS, setting stateless sessions, implementing temporary token handling, and removing `UserService`.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,9 +19,9 @@ spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.connection-timeout=30000
 
 # JPA Settings
+# JPA Settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # ==========================================
 # MAIL DOMAIN
@@ -38,8 +38,8 @@ mail.storage.base-path=/var/mail/vmail
 # ==========================================
 spring.mail.host=localhost
 spring.mail.port=587
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=deepak@btctech.shop
+spring.mail.password=Pradeep@2026
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
@@ -72,7 +72,7 @@ encryption.key=BtcTech2026Key16
 logging.level.root=INFO
 logging.level.com.btctech.mailapp=DEBUG
 logging.file.name=/opt/mailapp/logs/application.log
-
+logging.level.org.springframework.core.env=DEBUG
 # ==========================================
 # ERROR HANDLING
 # ==========================================
